# Solar3D

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  Solar3D.sln  VGE4SVF.sln
Example1/: Example1.vcxproj  Main.cpp
Example2/: Example2.vcxproj  Main.cpp
Example3/: Example3.vcxproj  Main.cpp
OAP3DPlugin/: CMakeLists.txt  ReaderWriterOAP3D.cpp  osgdb_oap3d.vcxproj  osgdb_oap3d.vcxproj.filters
PointPicker/: PointPicker.cpp  PointPicker.h  PointPicker.vcxproj  PointPicker.vcxproj.filters  ReadMe.txt  main.cpp  stdafx.cpp
SVFEngine/: PointRenderer.cpp  PointRenderer.h  SVFComputeTools.cpp  SVFComputeTools.h  SVFDatabasePager.h  SVFEDatabasePager.cpp  SVFEngine.vcxproj  SVFEngine.vcxproj.filters  ShapeFile.cpp  ShapeFile.h
Solar3D/: CMakeLists.txt  Main.cpp  Solar3D.vcxproj  Solar3D.vcxproj.filters
SolarEngine/: Cubemap.cpp  Cubemap.h  CustomControls.cpp  CustomControls.h  GrassSolar.cpp  ModelLoader.cpp  ModelLoader.h  PointsRenderer.cpp  PointsRenderer.h  RenderSurface.cpp  RenderSurface.h  SolarEngine.vcxproj  SolarEngine.vcxproj.filters  SolarInteractiveHandler.cpp  SolarInteractiveHandler.h  TypeDef.cpp  TypeDef.h  Utils.cpp  Utils.h
include/QtCore/: qconfig.h  qtcoreversion.h
include/QtCore/5.12.8/QtCore/private/: qconfig_p.h  qtcore-config_p.h
include/QtDBus/: qtdbusversion.h
include/QtDeviceDiscoverySupport/: qtdevicediscoverysupportversion.h
include/QtEdidSupport/: qtedidsupportversion.h
include/QtEventDispatcherSupport/: qteventdispatchersupportversion.h
include/QtFbSupport/: qtfbsupportversion.h
include/QtFontDatabaseSupport/: qtfontdatabasesupportversion.h
include/QtGui/: qtgui-config.h  qtguiversion.h
include/QtGui/5.12.8/QtGui/private/: qtgui-config_p.h
include/QtNetwork/: qtnetwork-config.h  qtnetworkversion.h
include/QtNetwork/5.12.8/QtNetwork/private/: qtnetwork-config_p.h
include/QtOpenGL/: qtopenglversion.h
include/QtOpenGLExtensions/: qtopenglextensionsversion.h
include/QtPlatformCompositorSupport/: qtplatformcompositorsupportversion.h
include/QtPlatformHeaders/: qtplatformheadersversion.h
include/QtPrintSupport/: qtprintsupportversion.h
include/QtSql/: qtsql-config.h  qtsqlversion.h
include/QtTest/: qttestlib-config.h  qttestversion.h
include/QtThemeSupport/: qtthemesupportversion.h
include/QtVulkanSupport/: qtvulkansupportversion.h
include/QtWidgets/: qtwidgetsversion.h
include/QtWindowsUIAutomationSupport/: QtWindowsUIAutomationSupportDepends  qtwindowsuiautomationsupportversion.h
include/QtXml/: qtxmlversion.h
include/osg/: Config  Version
include/osgEarth/: HTTPClient  IOTypes
include/osgEarthDrivers/: Export
include/osgEarthQt/: ui_LOSCreationDialog.h
include/osgEarthUtil/: TMSPackager
include/osgQt/: Version
lib/: GlU32.Lib  Half-2_3.lib  Half-2_3_s.lib  Iex-2_3.lib  Iex-2_3_s.lib  IexMath-2_3.lib  IexMath-2_3_s.lib  IlmImf-2_3.lib  IlmImfUtil-2_3.lib  IlmThread-2_3.lib  IlmThread-2_3_s.lib  Imath-2_3.lib  Imath-2_3_s.lib  OpenThreads.lib  PocoCppParser.lib  PocoCrypto.lib  PocoData.lib  PocoDataODBC.lib  PocoDataSQLite.lib  PocoEncodings.lib  PocoFoundation.lib  PocoJSON.lib  PocoMongoDB.lib  PocoNet.lib  PocoNetSSL.lib  PocoRedis.lib  PocoSevenZip.lib  PocoUtil.lib  PocoXML.lib  PocoZip.lib  Qt3Support4.lib  Qt5AccessibilitySupport.lib  Qt5Concurrent.lib  Qt5Core.lib  Qt5DBus.lib  Qt5DeviceDiscoverySupport.lib  Qt5EdidSupport.lib  Qt5EventDispatcherSupport.lib  Qt5FbSupport.lib  Qt5FontDatabaseSupport.lib  (+110 more)
lib/x64/: gdal_i.lib  osgAnimation.lib  osgAnimationd.lib  osgEarth.lib  osgEarthAnnotation.lib  osgEarthAnnotationd.lib  osgEarthFeatures.lib  osgEarthFeaturesd.lib  osgEarthQt.lib  osgEarthQtd.lib  osgEarthSplat.lib  osgEarthSplatd.lib  osgEarthSymbology.lib  osgEarthSymbologyd.lib  osgEarthUtil.lib  osgEarthUtild.lib  osgEarthd.lib  osgFX.lib  osgFXd.lib  osgGA.lib  osgGAd.lib  osgManipulator.lib  osgManipulatord.lib  osgParticle.lib  osgParticled.lib  osgPresentation.lib  osgPresentationd.lib  osgQt.lib  osgQtd.lib  osgShadow.lib  osgShadowd.lib  osgSim.lib  osgSimd.lib  osgTerrain.lib  osgTerraind.lib  osgText.lib  osgTextd.lib  osgUI.lib  osgUId.lib  osgViewer.lib  (+5 more)
